[gd_scene load_steps=5 format=3 uid="uid://r3r0d86iwqxa"]

[ext_resource type="Script" path="res://modules/entities/mining_machine.gd" id="1_u4rql"]
[ext_resource type="Script" path="res://modules/components/power_component.gd" id="2_8064y"]
[ext_resource type="Script" path="res://modules/components/craft_component.gd" id="3_q7y2w"]
[ext_resource type="Script" path="res://modules/components/recipe_component.gd" id="4_u7cmm"]

[node name="MiningMachine" type="Node2D"]
script = ExtResource("1_u4rql")

[node name="PowerComponent" type="Timer" parent="."]
unique_name_in_owner = true
script = ExtResource("2_8064y")

[node name="CraftComponent" type="Timer" parent="."]
unique_name_in_owner = true
script = ExtResource("3_q7y2w")

[node name="RecipeComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_u7cmm")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 29.0
offset_top = 26.0
offset_right = 486.0
offset_bottom = 60.0

[node name="ProgressBar2" type="ProgressBar" parent="."]
offset_left = 31.0
offset_top = 74.0
offset_right = 488.0
offset_bottom = 108.0

[node name="Button" type="Button" parent="."]
offset_left = 626.0
offset_top = 22.0
offset_right = 703.0
offset_bottom = 58.0
text = "Add Fuel"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
